k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chatapp-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: gmalo98/chatapp-backend
        ports:
        - containerPort: 5001
