k8s/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chatapp-production
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
