k8s/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chatapp-production
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
