k8s/service-mongodb.yml
apiVersion: v1
kind: Service

metadata:
  name: mongo
  namespace: chatapp-production

spec:
  selector:
    app: mongodb

  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

  type: ClusterIP
